jhj 관수님 자리에서 세팅 도와드림

--- a/src/assets/styles/utility/_variable.scss
+++ b/src/assets/styles/utility/_variable.scss
@@ -14,7 +14,9 @@ $zIndex-set: (
 );
 
 $path-set: (
+  badge: "~@/assets/images/badge/",
   btn: "~@/assets/images/btn/",
+  dft: "~@/assets/images/dft/",
   icon: "~@/assets/images/icon/",
   img: "~@/assets/images/img/",
   logo: "~@/assets/images/logo/",
