cgs - header 완 디테일체크 필요

--- a/src/assets/styles/component/_icon.scss
+++ b/src/assets/styles/component/_icon.scss
@@ -10,5 +10,6 @@
   }
 
 .icon-hamburger {
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='18' height='17' viewBox='0 0 18 17'%3E%3Cg id='그룹_4365' data-name='그룹 4365' transform='translate(-1832 -26)'%3E%3Crect id='사각형_2' data-name='사각형 2' width='18' height='3' transform='translate(1832 26)' fill='%2300eb79'/%3E%3Crect id='사각형_3' data-name='사각형 3' width='18' height='3' transform='translate(1832 33)' fill='%2300eb79'/%3E%3Crect id='사각형_4' data-name='사각형 4' width='18' height='3' transform='translate(1832 40)' fill='%2300eb79'/%3E%3C/g%3E%3C/svg%3E%0A");
+  background-color: #fff;
+  background-image: url("data:image/svg+xml,%0A%3Csvg xmlns='http://www.w3.org/2000/svg' width='18' height='17' viewBox='0 0 18 17'%3E%3Cg id='그룹_4365' data-name='그룹 4365' transform='translate(-1832 -26)'%3E%3Crect id='사각형_2' data-name='사각형 2' width='18' height='3' transform='translate(1832 26)' fill='%2300eb79'/%3E%3Crect id='사각형_3' data-name='사각형 3' width='18' height='3' transform='translate(1832 33)' fill='%2300eb79'/%3E%3Crect id='사각형_4' data-name='사각형 4' width='18' height='3' transform='translate(1832 40)' fill='%2300eb79'/%3E%3C/g%3E%3C/svg%3E%0A");
 }
