--- a/src/assets/styles/layout/_header.scss
+++ b/src/assets/styles/layout/_header.scss
@@ -19,6 +19,7 @@
 
 .underline-bk {
   position: relative;
+  z-index: 0;
 
   &::after {
     content: '';
@@ -30,6 +31,7 @@
     width: 100%;
     height: 1px;
     background-color: #171820;
+    z-index: -1;
   }
 }
 // END common
@@ -90,6 +92,7 @@
           display: inline-block;
           @include circle(8px);
           background-color: #FF5175;
+          z-index: 1;
         }
       }
     }
@@ -243,6 +246,7 @@
     line-height: 1.4;
     color: #171820;
     margin-bottom: 37px;
+    letter-spacing: 0;
 
     .bold-txt {
       font-weight: 500;
