--- a/src/assets/styles/ui.scss
+++ b/src/assets/styles/ui.scss
@@ -12,6 +12,8 @@
 // 3. vendor
 
 // 4. component
+@import "component/avatar-thumbnail";
+@import "component/card";
 @import "component/icon";
 @import "component/button";
 @import "component/form";
