--- a/src/assets/styles/component/_card.scss
+++ b/src/assets/styles/component/_card.scss
@@ -10,11 +10,11 @@
   .ribbon{
     @include bg-op($p: 0 50%, $s: contain);
 
-    background-color: #171820;
+    background-color: #41424A;
     color: white;
     font-size: 12px;
     font-weight: 600;
-    padding: 5px 16px 5px 10px;
+    padding: 6px 10px;
     position: relative;
 
     @include make-before{
@@ -23,8 +23,8 @@
       right: -5px;
       width: 0;
       height: 0;
-      border-left: 5px solid #171820;
-      border-bottom: 10px solid transparent;
+      border-left: 5px solid #41424A;
+      border-bottom: 12px solid transparent;
     }
     
     @include make-after{
@@ -34,8 +34,8 @@
       right: -5px;
       width: 0;
       height: 0;
-      border-top: 10px solid transparent;
-      border-bottom: 10px solid #171820;
+      border-bottom: 12px solid #41424a;
+      border-right: 5px solid transparent;
     }
   }
 }
