--- a/src/assets/styles/component/_form.scss
+++ b/src/assets/styles/component/_form.scss
@@ -14,6 +14,10 @@
   background-color: white;
   text-align: left;
 
+  &:first-child{
+    margin-top: 0;
+  }
+
   &::placeholder{
     color: #B8BAC7;
   }
@@ -41,7 +45,29 @@
 %inp-default{
   @include inp-default;
 }
-/* 인풋 + 검색버튼 */
+
+/* 인풋 + 인증번호 */
+.inp-btn-grp {
+  @include flex{
+    @include flex-op(center, flex-start);
+  }
+
+  gap: 5px;
+  margin: 5px 0;
+
+  .inp-grp,
+  .inp {
+    flex-shrink: 1;
+    margin: 0;
+  }
+
+  .btn-md{
+    flex-shrink: 0;
+    padding: 16px 10px;
+    max-width: 100px;
+    width: 100%;
+  }
+}
 
 /* 라벨 + 인풋 */
 .lbel-inp-grp{
@@ -71,7 +97,29 @@
   }
 }
 
-/* 단위있는 인풋 */
+/* 제한시간 있는 인풋 */
+.inp-time-grp{
+  width: 100%;
+  position: relative;
+
+  .inp{
+    width: 100%;
+    padding-right: 55px;
+  }
+
+  .inp-time{
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 15px;
+    font-size: 14px;
+    font-weight: 500;
+    text-decoration: underline;
+    color: #171820;
+  }
+}
+
+/* 인풋 + 단위 */
 .inp-unit-grp{
   width: 100%;
   position: relative;
