--- a/src/assets/styles/component/_form.scss
+++ b/src/assets/styles/component/_form.scss
@@ -10,7 +10,6 @@
   width: 100%;
   border: 1px solid #DDDEE6;
   padding: 16px 15px;
-  margin: 2.5px 0;
   background-color: white;
   text-align: left;
 
@@ -46,15 +45,19 @@
   @include inp-default;
 }
 
-/* 인풋 + 인증번호 */
-.inp-btn-grp {
+/* 기본 인풋그룹 */
+.inp-grp{
   @include flex{
     @include flex-op(center, flex-start);
   }
 
-  gap: 5px;
+  width: 100%;
   margin: 5px 0;
+  gap: 5px;
+}
 
+/* 인풋 + 인증번호 */
+.inp-btn-grp {
   .inp-grp,
   .inp {
     flex-shrink: 1;
@@ -83,27 +86,12 @@
   }
 }
 
-.lbel{
-  margin-bottom: 5px;
-  font-size: 13px;
-  font-weight: 400;
-  color: #171820;
-  display: inline-block;
-
-  .required{
-    color: #FF5175;
-    font-weight: 500;
-    font-size: 12px;
-  }
-}
-
 /* 제한시간 있는 인풋 */
 .inp-time-grp{
   width: 100%;
   position: relative;
 
   .inp{
-    width: 100%;
     padding-right: 55px;
   }
 
@@ -119,13 +107,26 @@
   }
 }
 
+.lbel{
+  margin-bottom: 5px;
+  font-size: 13px;
+  font-weight: 400;
+  color: #171820;
+  display: inline-block;
+
+  .required{
+    color: #FF5175;
+    font-weight: 500;
+    font-size: 12px;
+  }
+}
+
 /* 인풋 + 단위 */
 .inp-unit-grp{
   width: 100%;
   position: relative;
 
   .inp{
-    width: 100%;
     text-align: right;
     padding-right: 40px;
   }
