--- a/src/assets/styles/component/_icon.scss
+++ b/src/assets/styles/component/_icon.scss
@@ -42,3 +42,9 @@
   background-color: #fff;
   background-image: url("data:image/svg+xml,%0A%3Csvg xmlns='http://www.w3.org/2000/svg' width='18' height='17' viewBox='0 0 18 17'%3E%3Cg id='그룹_4365' data-name='그룹 4365' transform='translate(-1832 -26)'%3E%3Crect id='사각형_2' data-name='사각형 2' width='18' height='3' transform='translate(1832 26)' fill='%2300eb79'/%3E%3Crect id='사각형_3' data-name='사각형 3' width='18' height='3' transform='translate(1832 33)' fill='%2300eb79'/%3E%3Crect id='사각형_4' data-name='사각형 4' width='18' height='3' transform='translate(1832 40)' fill='%2300eb79'/%3E%3C/g%3E%3C/svg%3E%0A");
 }
+
+.icon-primary-close{
+    width: 18px;
+    height: 18px;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='18.121' height='18.121' viewBox='0 0 18.121 18.121'%3E%3Cg id='btn-close-header' transform='translate(-1416.939 -25.939)'%3E%3Crect id='사각형_2075' data-name='사각형 2075' width='18' height='18' transform='translate(1417 26)' fill='%23fff' opacity='0'/%3E%3Cg id='그룹_5702' data-name='그룹 5702' transform='translate(15.5 -0.5)'%3E%3Cline id='선_869' data-name='선 869' x2='16' y2='16' transform='translate(1402.5 27.5)' fill='none' stroke='%2300eb79' stroke-width='3'/%3E%3Cline id='선_870' data-name='선 870' x1='16' y2='16' transform='translate(1402.5 27.5)' fill='none' stroke='%2300eb79' stroke-width='3'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E%0A");
+}
