--- a/src/assets/styles/layout/_header.scss
+++ b/src/assets/styles/layout/_header.scss
@@ -42,13 +42,16 @@
 }
 
 .header-inner {
-  width: 90%;
-  max-width: 1780px;
+  width: 100%;
   height: 70px;
   margin: 0 auto;
+  padding: 0 70px;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  background-color: white;
+  z-index: 2;
+  position: relative;
 
   .hd-left {
     display: flex;
@@ -169,6 +172,8 @@
   position: relative;
   
   .hd-search-wrap {
+    @include flex-center;
+
     width: 100%;
     background-color: #171820;
     height: 0;
@@ -177,10 +182,56 @@
     transform: translateX(-50%);
     top: 70px;
     transition: all .3s;
-    z-index: 1;
+    height: 70px;
+    top: 0;
+    z-index: -1;
 
     &.is-active {
-      height: 70px;
+      top: 70px;
+      z-index: 1;
+    }
+  }
+}
+
+.hd-search-grp{
+  @include flex-center;
+
+  width: 90%;
+  max-width: 1090px;
+  margin: 0 auto;
+  gap: 5px;
+
+  .custom-slct{
+    flex-shrink: 0;
+  }
+
+  .slct-depth01{
+    flex: 0.75;
+    min-width: 135px;
+    width: 100%;
+  }
+
+  .slct-depth02{
+    flex: 1.2;
+    min-width: 135px;
+    width: 100%;
+  }
+
+  .inp-sch-grp{
+    flex: 3;
+  }
+
+  .close-btn{
+    padding: 15px;
+
+    &:hover{
+      // FIXME 모바일에선 고쳐야할 수도
+      background-color: rgb(255 255 255 / 10%);
+      border-radius: 5px;
+    }
+
+    &:active{
+      background-color: rgb(255 255 255 / 14%);
     }
   }
 }
