jhj 회사정보 카드 구성요소 제작 완료

--- a/src/assets/styles/component/_icon.scss
+++ b/src/assets/styles/component/_icon.scss
@@ -48,3 +48,15 @@
     height: 18px;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='18.121' height='18.121' viewBox='0 0 18.121 18.121'%3E%3Cg id='btn-close-header' transform='translate(-1416.939 -25.939)'%3E%3Crect id='사각형_2075' data-name='사각형 2075' width='18' height='18' transform='translate(1417 26)' fill='%23fff' opacity='0'/%3E%3Cg id='그룹_5702' data-name='그룹 5702' transform='translate(15.5 -0.5)'%3E%3Cline id='선_869' data-name='선 869' x2='16' y2='16' transform='translate(1402.5 27.5)' fill='none' stroke='%2300eb79' stroke-width='3'/%3E%3Cline id='선_870' data-name='선 870' x1='16' y2='16' transform='translate(1402.5 27.5)' fill='none' stroke='%2300eb79' stroke-width='3'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E%0A");
 }
+
+.icon-jump{
+    width: 15px;
+    height: 20px;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='15' height='20' viewBox='0 0 15 20'%3E%3Cg id='icon-link-gn' transform='translate(-415 -1208)'%3E%3Crect id='사각형_24' data-name='사각형 24' width='15' height='20' transform='translate(415 1208)' fill='%23fff' opacity='0'/%3E%3Cpath id='패스_155' data-name='패스 155' d='M-290.238-337.506l-5.191-6.16v2.924a10.435,10.435,0,0,0-9.809,10.415v2.606l.018-.041a10.7,10.7,0,0,1,9.791-6.5v2.913Z' transform='translate(720.238 1554.666)' fill='%2300eb79'/%3E%3C/g%3E%3C/svg%3E%0A");
+}
+
+.icon-loca{
+    width: 15px;
+    height: 20px;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='15' height='20' viewBox='0 0 15 20'%3E%3Cg id='icon-pin-gn' transform='translate(-415 -1182)'%3E%3Crect id='사각형_23' data-name='사각형 23' width='15' height='20' transform='translate(415 1182)' fill='%23fff' opacity='0'/%3E%3Cpath id='패스_154' data-name='패스 154' d='M-354.233-350.485a7.5,7.5,0,0,0-7.5,7.5c0,5.943,7.5,11.6,7.5,11.6s7.5-5.66,7.5-11.6A7.5,7.5,0,0,0-354.233-350.485Zm0,10.515a3.608,3.608,0,0,1-3.608-3.608,3.608,3.608,0,0,1,3.608-3.608,3.609,3.609,0,0,1,3.609,3.608A3.609,3.609,0,0,1-354.233-339.97Z' transform='translate(776.733 1532.933)' fill='%2300eb79'/%3E%3C/g%3E%3C/svg%3E%0A");
+}
