--- a/src/assets/styles/component/_avatar-thumbnail.scss
+++ b/src/assets/styles/component/_avatar-thumbnail.scss
@@ -8,6 +8,7 @@
     width: 100%;
     height: 100%;
     object-fit: contain;
+    vertical-align: bottom;
   }
 }
 
@@ -17,7 +18,6 @@
 
 .thumbnail{
   width: 100%;
-  max-width: 260px;
 
   .thumbnail-ratio{
     width: 100%;
@@ -40,5 +40,4 @@
 }
 
 .thumbnail.is-lg{
-  max-width: 410px;
 }
