--- a/src/assets/styles/component/_card.scss
+++ b/src/assets/styles/component/_card.scss
@@ -1,9 +1,9 @@
-.card{
+.card{ // 프로필 카드
   width: 100%;
   max-width: 260px;
   
   .card-thumb{
-    margin-bottom: 15px;
+    margin-bottom: 10px;
   }
 
   .card-name{
@@ -17,6 +17,7 @@
 
 .card-thumb{
   width: 100%;
+  max-width: 260px;
   position: relative;
 
   .ribbon{
@@ -53,10 +54,17 @@
   }
 }
 
+.card-thumb-lg{
+  max-width: 410px;
+}
+
 .card-subtxt-grp{
   @include font-op($c: #5c5e70){
     font-size: 12px;
   }
+
+  display: inline-block;
+  width: 100%;
 }
 
 .card-subtxt-list{
@@ -77,6 +85,13 @@
   }
 }
 
+.card-user-type{
+  font-size: 12px;
+  color: #8E909F;
+  display: inline-block;
+  width: 100%;
+}
+
 .card-name{
   @include font-op($w: 600, $c: #171820){
     font-size: 19px;
@@ -92,4 +107,91 @@
 .card-tag-list{
   display: inline;
   line-height: 1.5;
+}
+
+.info-card { // 회사 정보 프로필 카드
+  @include flex{
+    @include flex-op(stretch, flex-start);
+  };
+
+  width: 100%;
+  max-width: 1090px;
+  background-color: white;
+  padding: 20px 23px;
+  box-shadow: 0 10px 20px rgba(#171820, 0.08);
+
+  .card-thumb{
+    margin-right: 20px;
+  }
+
+  .avatar-with-name{
+    margin-bottom: 20px;
+
+    .avatar {
+      width: 50px;
+      height: 50px;
+      margin-right: 15px;
+    } 
+
+    .name {
+      font-size: 18px;
+    }
+  }
+}
+
+.card-company-info{
+  @include flex-col;
+  @include flex-op(flex-start, center);
+
+  width: 100%;
+  gap: 20px;
+}
+
+.card-dlist-grp{
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 7px;
+  row-gap: 18px;
+}
+
+.card-dlist{
+  @include flex{
+    @include flex-op(flex-start, flex-start);
+  }
+  
+  font-size: 15px;
+  width: 100%;
+
+  .lbel{
+    @include font-op($w: 400, $c: #8e909f){
+      font-size: inherit;
+    };
+
+    margin-bottom: 0;
+    width: 100%;
+    max-width: 85px;
+    padding-right: 10px;
+  }
+
+  .txt{
+    color: #171820;
+
+    & > span{
+      @include ellipse(1, 17px);
+    }
+  }
+}
+
+.card-keyword-badge-grp{
+  @include flex{
+    @include flex-op(center, flex-start);
+  }
+
+  gap: 5.5px;
+  flex-wrap: wrap;
+
+  .badge-rounded{
+    flex-shrink: 0;
+  }
 }
