--- a/src/assets/styles/page/_auth.scss
+++ b/src/assets/styles/page/_auth.scss
@@ -9,7 +9,7 @@
 }
 
 .auth-panel {
-  padding-top: 40px;
+  padding: 40px 0 150px;
 }
 
 .banner-wrap {
@@ -17,42 +17,20 @@
   height: 160px;
 }
 
-.input-grp {
-  position: relative;
-  height: 50px;
+.effect-ttl {
+  font-size: rem(28);
+  font-weight: 400;
+  color: #171820;
+  line-height: 1.3;
+  margin: 80px 0 14px;
 
-  .label {
-    position: absolute;
-    left: 0;
-    top: 50%;
-    transform: translateY(-50%);
-    width: 100%;
-    font-size: rem(16);
-    color: #B8BAC7;
+  .bold-txt {
     font-weight: 500;
-    transition: all .2s;
-    z-index: 0;
   }
+}
 
-  .input {
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    @include input-reset;
-    z-index: 1;
-    border-bottom: 1px solid #B8BAC7;
-
-    &:focus {
-      border-bottom: 1px solid #00EB79;
-
-      + label {
-        font-size: rem(12);
-        top: 0;
-      }
-    }
-  }
+.effect-inp-wrap {
+  padding-bottom: 10px;
 }
 
 .effect-inp-grp{
@@ -82,6 +60,9 @@
     top: 0;
     width: 100%;
     height: 100%;
+    font-size: rem(16);
+    font-weight: 500;
+    color: #171820;
     z-index: 1;
     border-bottom: 1px solid #B8BAC7;
 
@@ -91,9 +72,57 @@
   }
 }
 
-.effect-inp-grp.is-focused{
+.effect-inp-grp.is-focused {
+
   .label {
     font-size: rem(12);
     top: 0;
   }
+}
+
+.find-wrap {
+  margin: 20px 0 40px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: rem(14);
+
+  .dec {
+    color: #5C5E70;
+    font-weight: 500;
+  }
+
+  .btn-wrap {
+    display: flex;
+    gap: 23px;
+
+    .find-link {
+      position: relative;
+      color: #171820;
+      font-weight: 600;
+
+      &:last-child {
+
+        &::after {
+          display: none;
+        }
+      }
+
+      &::after {
+        position: absolute;
+        left: auto;
+        right: -11.5px;
+        top: 50%;
+        transform: translateY(-50%);
+        content: '';
+        display: inline-block;
+        width: 1px;
+        height: 90%;
+        background-color: #8E909F;
+        cursor: auto;
+        
+      }
+    }
+  }
+
 }
