cgs - find-id 작업중

--- a/src/assets/styles/page/_auth.scss
+++ b/src/assets/styles/page/_auth.scss
@@ -142,3 +142,9 @@
 /* ========== END 로그인 ========== */
 
 /* ========== 아이디 찾기 ========== */
+
+.confirm-ment {
+  font-size: rem(13);
+  font-weight: 400;
+  color: #3060FF;
+}
