cgs - find-id 완

--- a/src/assets/styles/page/_auth.scss
+++ b/src/assets/styles/page/_auth.scss
@@ -1,4 +1,9 @@
 /* ========== 로그인 ========== */
+.color-gray {
+  color: #B8BAC7;
+  font-weight: 600;
+}
+
 .page {
   width: 100%;
 
@@ -147,6 +152,16 @@
 
 .confirm-ment {
   font-size: rem(13);
-  font-weight: 400;
+  font-weight: 500;
   color: #3060FF;
 }
+
+.find-id-btn-wrap {
+  display: flex;
+  gap: 5px;
+
+  .btn-prev {
+    max-width: 140px;
+  }
+}
+
