--- a/src/assets/styles/component/_icon.scss
+++ b/src/assets/styles/component/_icon.scss
@@ -72,3 +72,9 @@
     height: 14px;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='7.592' height='13.061' viewBox='0 0 7.592 13.061'%3E%3Cpath id='icon-pg-nxt' d='M-19274.736-7922.715l6,6-6,6' transform='translate(19275.268 7923.245)' fill='none' stroke='%238f8f98' stroke-width='1.5'/%3E%3C/svg%3E%0A");
 }
+
+.icon-cam{
+    width: 16px;
+    height: 16px;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 16 16'%3E%3Cg id='icon-img' transform='translate(-880 -452)'%3E%3Crect id='사각형_2338' data-name='사각형 2338' width='16' height='16' transform='translate(880 452)' fill='%2353ff81' opacity='0'/%3E%3Cpath id='패스_6647' data-name='패스 6647' d='M14.823,35.862H10.591l-.855-1.436a.463.463,0,0,0-.4-.226H6.65a.463.463,0,0,0-.4.226L5.4,35.862H4.009v-.316a.463.463,0,0,0-.463-.463H1.831a.463.463,0,0,0-.463.463v.316h-.2A1.165,1.165,0,0,0,0,37.027v8.437A1.165,1.165,0,0,0,1.165,46.63H14.823a1.165,1.165,0,0,0,1.165-1.165V37.027A1.165,1.165,0,0,0,14.823,35.862Zm-6.829,8.7a3.317,3.317,0,1,1,3.317-3.317A3.317,3.317,0,0,1,7.994,44.563Z' transform='translate(880 419.301)' fill='%235c5e70'/%3E%3Ccircle id='타원_350' data-name='타원 350' cx='2.317' cy='2.317' r='2.317' transform='translate(885.677 458.229)' fill='%235c5e70'/%3E%3C/g%3E%3C/svg%3E%0A");
+}
