--- a/src/assets/styles/layout/_common.scss
+++ b/src/assets/styles/layout/_common.scss
@@ -185,6 +185,10 @@
   text-align: left;
   margin-bottom: 50px;
 
+  .badge-flag{
+    margin-bottom: 5px;
+  }
+
   .ttl{
     @include font-op($w: 400, $c: #171820){
       font-size: 25px;
@@ -192,6 +196,14 @@
 
     -webkit-text-stroke: 1px #171820;
     margin-bottom: 12px;
+
+    .ttl-txt{
+      vertical-align: middle;
+    }
+
+    .badge-auth{
+      margin-left: 5px;
+    }
   }
 
   .ttl-sub{
@@ -201,11 +213,28 @@
 
     line-height: 1.5;
   }
+
+  .ttl-sub-btn{
+    margin-top: 20px;
+    padding-left: 22px;
+    padding-right: 22px;
+  }
+}
+
+.auth-hgrp ~ .auth-form-area{
+  margin-top: -10px;
+}
+
+.auth-hgrp ~ .ftck-auth-form-area{
+  margin-top: -25px;
 }
 
 .symbol-fs{
   max-width: 30px;
   margin-bottom: 24px;
+}
+
+.badge-flag{
 }
 
 // 구성요소 - auth 관련 type 선택
@@ -288,5 +317,162 @@
 
   .icon-check{
     opacity: 1;
+  }
+}
+
+// 구성요소 - auth 관련 건너뛰기 멘트
+.auth-skip-ment{
+  @include flex-col;
+  @include flex-op(center, center);
+
+  gap: 12px;
+  padding: 50px 0 20px;
+
+  .skip-ment{
+    @include font-op($w: 500, $c: #8E909F){
+      font-size: 12px;
+    }
+  }
+
+  .btn-txt{
+    &:hover{
+      text-decoration: underline;
+    }
+  }
+}
+
+// 구성요소 - auth 관련 이미지 업로드 틀
+.input-img-frame{
+  border: 1px solid #DDDEE6;
+  background-color: #EBECF5;
+  overflow: hidden;
+  position: relative;
+  cursor: pointer;
+
+  .input-img{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    position: relative;
+    z-index: 2;
+  }
+
+  .btn-upload{
+    @include translate(50%, 50%);
+
+    z-index: 1;
+  }
+}
+
+.input-circle-img-frame{
+  @include circle(100px);
+}
+
+.input-square-img-frame{
+  width: 260px;
+  height: 180px;
+  border-color: #ebecf5;
+}
+
+// 구성요소 - detail list grp
+.dlist-grp{ // detail list grp
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 7px;
+  row-gap: 18px;
+}
+
+.dlist{
+  @include flex{
+    @include flex-op(flex-start, flex-start);
+  }
+  
+  font-size: 15px;
+  width: 100%;
+
+  .lbel{
+    @include font-op($w: 400, $c: #8e909f){
+      font-size: inherit;
+    };
+
+    margin-bottom: 0;
+    width: 100%;
+    max-width: 85px;
+    padding-right: 10px;
+  }
+
+  .txt{
+    width: 100%;
+    color: #171820;
+
+    & > span{
+      @include ellipse(1, 17px);
+    }
+  }
+}
+
+.dlist-col1-grp{
+  grid-template-columns: repeat(1, 1fr);
+  row-gap: 7px;
+
+  .dlist{
+    font-size: 14px;
+
+    .lbel{
+      max-width: 140px;
+    }
+
+    .txt{
+      text-align: right;
+    }
+  }
+}
+
+// 구성요소 - auth 관련 경력사항 항목 추가 input list
+.add-inp-grp{
+  width: 100%;
+
+  .inp-grp{
+    margin-bottom: 5px;
+  }
+
+  .del-btn{
+    @include bg-op($p: 50% 50%, $s: 14px);
+    
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='14' height='14' viewBox='0 0 14 14'%3E%3Cg id='icon-del-input' transform='translate(-888 -1059)'%3E%3Crect id='사각형_2114' data-name='사각형 2114' width='14' height='14' transform='translate(888 1059)' fill='rgba(255,255,255,0)'/%3E%3Cg id='그룹_5805' data-name='그룹 5805' transform='translate(-14.5 0.5)'%3E%3Cline id='선_889' data-name='선 889' x2='10' y2='10' transform='translate(904.5 1060.5)' fill='none' stroke='%238e909f' stroke-width='2'/%3E%3Cline id='선_890' data-name='선 890' x1='10' y2='10' transform='translate(904.5 1060.5)' fill='none' stroke='%238e909f' stroke-width='2'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E%0A");
+    width: 55px;
+    background-color: #F9F9FB;
+    flex-shrink: 0;
+
+    &:hover{
+      background-color: darken(#F9F9FB, 3%);
+    }
+
+    &:active{
+      background-color: darken(#F9F9FB, 6%);
+    }
+  }
+
+  & ~ .add-inp-btn{
+    margin-top: 5px;
+    border: 1px solid #5c5e70;
+    box-shadow: none;
+  }
+}
+
+// 구성요소 - auth 관련 관심키워드 항목 badge group
+.add-badge-grp{
+  @include flex{
+    @include flex-op(flex-start, flex-start);
+
+    gap: 5px;
+    flex-wrap: wrap;
+  }
+
+  padding: 5px 0 10px;
+
+  & > *{
+    flex-shrink: 0;
   }
 }
