cgs - 공지 interaction 작업 예정

--- a/src/assets/styles/component/_icon.scss
+++ b/src/assets/styles/component/_icon.scss
@@ -72,3 +72,8 @@
     height: 14px;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='7.592' height='13.061' viewBox='0 0 7.592 13.061'%3E%3Cpath id='icon-pg-nxt' d='M-19274.736-7922.715l6,6-6,6' transform='translate(19275.268 7923.245)' fill='none' stroke='%238f8f98' stroke-width='1.5'/%3E%3C/svg%3E%0A");
 }
+
+.ttl-box-icon {
+  width: 9px;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='9.06' height='5.591' viewBox='0 0 9.06 5.591'%3E%3Cg id='btn-fold' transform='translate(0.53 5.061) rotate(-90)'%3E%3Cpath id='패스_1' data-name='패스 1' d='M.53,8.53-.53,7.47,2.939,4-.53.53.53-.53,5.061,4Z' fill='%23303038'/%3E%3C/g%3E%3C/svg%3E%0A");
+}
