--- a/src/assets/styles/layout/_header.scss
+++ b/src/assets/styles/layout/_header.scss
@@ -38,6 +38,7 @@
 .header-wrap {
   position: sticky;
   top: 0;
+  z-index: 1;
 }
 
 .header {
@@ -264,7 +265,7 @@
   left: -370px;
   top: 0;
   z-index: 30;
-  max-width: 370px;
+  min-width: 370px;
   height: 100%;
   padding: 26px 70px;
   background-color: #fff;
