--- a/src/assets/styles/page/_company.scss
+++ b/src/assets/styles/page/_company.scss
@@ -34,11 +34,26 @@
   background-color: #fff;
 }
 
-.board-cont-list-wrap {
-  padding: 0 40px;
+.board-cont-list-space {
+  width: 100%;
+  height: 10px;
+  background-color: #F9F9FB;
 }
 
 .board-cont-list {
+  padding: 0 40px;
+
+  .ttl-box-left {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+  }
+
+  .ttl-box-right {
+    display: flex;
+    align-items: center;
+    min-width: 110px;
+  }
 
   &.is-active {
 
@@ -74,7 +89,7 @@
 
   .no {
     display: inline-block;
-    width: 70px;
+    min-width: 70px;
     font-size: rem(14);
     font-weight: 400;
     color: #8E909F;
@@ -92,17 +107,19 @@
   font-weight: 500;
   color: #B0B1BC;
   margin-right: 22px;
+  margin-left: 10px;
   letter-spacing: -0.5px;
 }
 
 .board-cont-box {
-  padding: 40px 70px;
+  padding: 40px 0 40px 70px;
   display: none;
   
   .q-cont {
     font-size: rem(16);
     font-weight: 400;
     color: #5C5E70;
+    line-height: 1.5;
   }
 }
 
