--- a/src/assets/styles/component/_form.scss
+++ b/src/assets/styles/component/_form.scss
@@ -214,6 +214,8 @@ textarea.inp{
 }
 
 .slct-opts-grp{
+  @include custom-scroll(#DDDEE6);
+
   background-color: white;
   padding: 10px 0;
   box-shadow: 0 3px 8px rgba(#171820, 0.1);
@@ -225,6 +227,8 @@ textarea.inp{
   z-index: 1;
   opacity: 0;
   pointer-events: none;
+  max-height: 250px;
+  overflow: auto;
 
   .slct-opts-list{
     @include font-op($w: 400, $c: #5C5E70){
