--- a/src/assets/styles/page/_auth.scss
+++ b/src/assets/styles/page/_auth.scss
@@ -158,15 +158,7 @@
   font-size: rem(13);
   font-weight: 500;
   color: #3060FF;
-}
-
-.find-id-btn-wrap {
-  display: flex;
-  gap: 5px;
-
-  .btn-prev {
-    max-width: 140px;
-  }
+  margin-top: 10px;
 }
 
 .print-grp {
