--- a/src/assets/styles/component/_icon.scss
+++ b/src/assets/styles/component/_icon.scss
@@ -79,7 +79,16 @@
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 16 16'%3E%3Cg id='icon-img' transform='translate(-880 -452)'%3E%3Crect id='사각형_2338' data-name='사각형 2338' width='16' height='16' transform='translate(880 452)' fill='%2353ff81' opacity='0'/%3E%3Cpath id='패스_6647' data-name='패스 6647' d='M14.823,35.862H10.591l-.855-1.436a.463.463,0,0,0-.4-.226H6.65a.463.463,0,0,0-.4.226L5.4,35.862H4.009v-.316a.463.463,0,0,0-.463-.463H1.831a.463.463,0,0,0-.463.463v.316h-.2A1.165,1.165,0,0,0,0,37.027v8.437A1.165,1.165,0,0,0,1.165,46.63H14.823a1.165,1.165,0,0,0,1.165-1.165V37.027A1.165,1.165,0,0,0,14.823,35.862Zm-6.829,8.7a3.317,3.317,0,1,1,3.317-3.317A3.317,3.317,0,0,1,7.994,44.563Z' transform='translate(880 419.301)' fill='%235c5e70'/%3E%3Ccircle id='타원_350' data-name='타원 350' cx='2.317' cy='2.317' r='2.317' transform='translate(885.677 458.229)' fill='%235c5e70'/%3E%3C/g%3E%3C/svg%3E%0A");
 }
 
-.ttl-box-icon {
-    width: 9px;
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='9.06' height='5.591' viewBox='0 0 9.06 5.591'%3E%3Cg id='btn-fold' transform='translate(0.53 5.061) rotate(-90)'%3E%3Cpath id='패스_1' data-name='패스 1' d='M.53,8.53-.53,7.47,2.939,4-.53.53.53-.53,5.061,4Z' fill='%23303038'/%3E%3C/g%3E%3C/svg%3E%0A");
+.icon-ttl-box {
+  width: 9px;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='9.06' height='5.591' viewBox='0 0 9.06 5.591'%3E%3Cg id='btn-fold' transform='translate(0.53 5.061) rotate(-90)'%3E%3Cpath id='패스_1' data-name='패스 1' d='M.53,8.53-.53,7.47,2.939,4-.53.53.53-.53,5.061,4Z' fill='%23303038'/%3E%3C/g%3E%3C/svg%3E%0A");
+}
+
+.icon-q {
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='13.12' height='18.06' viewBox='0 0 13.12 18.06'%3E%3Cpath id='패스_6653' data-name='패스 6653' d='M6.56-6.5c0-4.9-2.44-7.76-6.56-7.76S-6.56-11.4-6.56-6.5-4.12,1.26,0,1.26a7.642,7.642,0,0,0,1.7-.18c1.04.94,1.8,1.8,2.68,2.72L6.36,2.32A30.818,30.818,0,0,0,3.96.02C5.64-1.24,6.56-3.48,6.56-6.5Zm-2.68,0C3.88-3.1,2.56-1.02,0-1.02S-3.88-3.1-3.88-6.5-2.56-11.98,0-11.98,3.88-9.9,3.88-6.5Z' transform='translate(6.56 14.26)' fill='%2353ff81'/%3E%3C/svg%3E%0A");
+}
+
+.icon-a {
+  min-width: 14px;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='14.18' height='15.12' viewBox='0 0 14.18 15.12'%3E%3Cpath id='icon-a' d='M1.03-14.06h-2.2L-7.09,1.06h2.86l1.48-4.08H2.69L4.21,1.06H7.09Zm-2.98,8.8,1.8-4.92H.01L1.85-5.26Z' transform='translate(7.09 14.06)' fill='%2300eb79'/%3E%3C/svg%3E%0A");
 }
