--- a/src/assets/styles/page/_company.scss
+++ b/src/assets/styles/page/_company.scss
@@ -45,10 +45,16 @@
     line-height: 1.25;
     overflow: hidden;
 
-    .txt {
+    .txt1 {
       display: inline-block;
       animation-name: slideup;
-      animation-duration: 1.3s;
+      animation-duration: 1.6s;
+    }
+
+    .txt2 {
+      display: inline-block;
+      animation-name: slideup;
+      animation-duration: 1.9s;
     }
   }
 }
@@ -57,7 +63,7 @@
   background-color: #F9F9FB;
   padding: 50px 0 140px;
   animation-name: slideup;
-  animation-duration: 2.5s;
+  animation-duration: 2s;
 }
 
 .board-tab-all-wrap {
