--- a/src/assets/styles/component/_button.scss
+++ b/src/assets/styles/component/_button.scss
@@ -307,6 +307,21 @@
   }
 }
 
+.badge-qa-state{
+  background-color: #DDDEE6;
+  color: #8E909F;
+  font-size: 12px;
+  font-weight: 500;
+  padding: 5px 8px;
+  display: inline-block;
+}
+
+.badge-qa-state.is-active{
+  background-color: #171820;
+  color: white;
+}
+
+
 .badge-p{
   @include bg-op($s: 7px, $p: 50% 50%);
   @include circle(18px);
