--- a/src/assets/styles/ui.scss
+++ b/src/assets/styles/ui.scss
@@ -27,6 +27,7 @@
 @import "layout/terms";
 
 // 6. page
+@import "page/page404";
 @import "page/auth";
 @import "page/company";
 @import "page/inquiry";
