jhj 카드에 로고 적용

--- a/src/assets/styles/component/_card.scss
+++ b/src/assets/styles/component/_card.scss
@@ -52,6 +52,12 @@
       border-right: 5px solid transparent;
     }
   }
+
+  .avatar{
+    @include absolute($b: -8px, $r: 8px);
+    
+    z-index: 1;
+  }
 }
 
 .card-thumb-lg{
