--- a/src/assets/styles/layout/_common.scss
+++ b/src/assets/styles/layout/_common.scss
@@ -669,3 +669,286 @@
     color: #B0B1BC;
   }
 }
+
+// 구성요소 - 결과페이지 레이아웃
+.search-layout{
+  @include flex{
+    @include flex-op(flex-start, flex-start);
+  }
+
+  width: 100%;
+  max-width: 1350px;
+  margin: 0 auto;
+  padding: 40px 0 150px;
+  gap: 40px;
+
+  .search-layout-nav{
+    width: 100%;
+    max-width: 220px;
+    flex-shrink: 0;
+    position: sticky;
+    top: 110px;
+  }
+  
+  .search-layout-cont{
+    width: 100%;
+    padding-top: 45px;
+  }
+
+  .pagination{
+    margin-top: 50px;
+  }
+}
+
+.side-nav{
+}
+
+.side-nav-ttl-grp{
+  width: 100%;
+  border-bottom: 2px solid #00EB79;
+  padding-bottom: 18px;
+  margin-bottom: 3px;
+
+  .ttl{
+    @include font-op($w: 500, $c: #171820){
+      font-size: 20px;
+    };
+
+    line-height: 1.4;
+  }
+}
+
+.side-nav-grp{
+  width: 100%;
+  padding: 10px 0;
+  border-bottom: 1px solid #DDDEE6;
+
+  &:last-child{
+    border-bottom: 0;
+  }
+}
+
+.side-nav-top-grp{
+  .side-nav-btn{
+    padding: 8px 0;
+
+    .txt{
+      font-size: 14px;
+    }
+
+    .arrow{
+      margin-top: 4.5px;
+    }
+  }
+}
+
+.side-nav-list.is-active{
+  .side-nav-lnb-grp{
+    display: block;
+  }
+
+  .side-nav-btn {
+    .txt{
+      font-weight: 500;
+    }
+
+    .arrow{
+      transform: rotate(90deg);
+    }
+  }
+}
+
+.side-nav-btn{
+  @include flex{
+    @include flex-op(flex-start, flex-start);
+  }
+  @include input-reset;
+
+  width: 100%;
+  text-align: left;
+  padding: 11px 0;
+  cursor: pointer;
+
+  .txt{
+    display: block;
+    font-size: 16px;
+    line-height: 1.4;
+  }
+
+  .arrow{
+    @include bg-op($p: center, $s: contain);
+
+    display: block;
+    width: 15px;
+    height: 10px;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='5.592' height='9.061' viewBox='0 0 5.592 9.061'%3E%3Cpath id='패스_1' data-name='패스 1' d='M-19274.736-7922.715l4,4-4,4' transform='translate(19275.268 7923.245)' fill='none' stroke='%23171820' stroke-width='1.5'/%3E%3C/svg%3E%0A");
+    margin-left: auto;
+    margin-right: 0;
+    transition: all 0.2s;
+    transform: rotate(0);
+    margin-top: 6px;
+  }
+}
+
+.side-nav-lnb-grp{
+  width: 100%;
+  padding: 5px 0 10px;
+  padding-left: 20px;
+  display: none;
+
+  .lnb-btn{
+    @include input-reset;
+
+    display: inline-block;
+    width: 100%;
+    font-size: 15px;
+    color: #8E909F;
+    text-align: left;
+    margin: 6px 0;
+    cursor: pointer;
+  }
+
+  .lnb-btn.router-link-active{
+    color: #171820;
+    -webkit-text-stroke: 0.5px #171820;
+  }
+}
+
+// 구성요소 - 결과 grid
+.card-grid-grp{
+  width: 100%;
+  max-width: 1090px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  row-gap: 50px;
+  column-gap: 17px;
+
+  .card{
+    width: 100%;
+    cursor: pointer;
+  }
+}
+
+.card-grid-grp-ttl{
+  @include flex{
+    @include flex-op(center, flex-start);
+  }
+
+  margin-bottom: 15px;
+  color: #171820;
+  gap: 10px;
+
+  .txt{
+    font-size: 16px;
+    position: relative;
+
+    .bold{
+      font-weight: 300;
+      -webkit-text-stroke: 1px #171820;
+    }
+  }
+
+  .highlight{
+    position: relative;
+    font-weight: 500;
+
+    @include make-before{
+      @include absolute($b: 0);
+
+      display: inline-block;
+      width: 100%;
+      height: 4px;
+      background-color: #53FF81;
+      z-index: 0;
+    }
+
+    u{
+      position: relative;
+      z-index: 1;
+      text-decoration: none;
+    }
+  }
+
+  .custom-slct{
+    margin-left: auto;
+    margin-right: 0;
+    width: 150px;
+  }
+
+  .img-advice{
+    @include absolute($b: 0, $r: -73px);
+  }
+}
+
+// 구성요소 - 브레드크럼
+.breadcrumb{
+  font-size: 13px;
+  color: #8E909F;
+  text-align: left;
+
+  .txt{
+    display: inline-block;
+    position: relative;
+    padding-right: 8px;
+    margin-right: 3px;
+
+    @include make-after($c: '>'){
+      @include absolute($t: 0, $r: 0);
+
+      display: inline-block;
+    };
+
+    &:last-child{
+      &:after{
+        display: none;
+      }
+    }
+  }
+}
+
+// 구성요소 - 결과페이지 레이아웃 제목
+.search-cont-hgrp{
+  margin-bottom: 19px;
+
+  .breadcrumb{
+    width: 100%;
+    margin-bottom: 10px;
+  }
+
+  .ttl{
+    @include font-op($c: #171820, $w: 500){
+      font-size: 28px;
+    }
+    line-height: 1.4;
+  }
+}
+
+// 구성요소 - 결과페이지 결과 없을 때
+.nothing-result-box{
+  @include flex-center;
+  @include flex-col;
+
+  background-color: #F9F9FB;
+  padding: 70px 20px;
+  text-align: center;
+
+  .empty-txt{
+    font-weight: 500;
+    font-size: 20px;
+    color: #171820;
+  }
+
+  .desc{
+    @include font-op($c: #171820){
+      font-size: 18px;
+    }
+
+    line-height: 1.4;
+    margin: 15px 0 20px;
+  }
+
+  .btn-bd{
+    width: 100%;
+    max-width: 145px;
+  }
+}
