--- a/src/assets/styles/layout/_common.scss
+++ b/src/assets/styles/layout/_common.scss
@@ -952,3 +952,39 @@
     max-width: 145px;
   }
 }
+
+.main-swiper-container{
+  // height: 600px;
+}
+
+.test-section{
+  // overflow: hidden;
+  // width: 100%;
+  // height: 500px;
+}
+
+.swiper-slide{
+  .info-card{
+    position: relative;
+    border: 1px solid #DDDEE6;
+
+    @include make-before{
+      @include absolute($t: 0);
+
+      width: 100%;
+      height: 100%;
+      background-color: white;
+      z-index: 10;
+      opacity: 0.4;
+      transition: all 0.3s;
+    }
+  }
+}
+
+.swiper-slide-active{
+  .info-card{
+    &:before{
+      opacity: 0;
+    }
+  }
+}
